# RLPx-handshake

./: .gitignore  Cargo.toml  README.md  discovery-secret  install-deps.sh  run
.devcontainer/: devcontainer.json
src/: basic.rs  ecies.rs  initiator.rs  macstate.rs  main.rs  p2p.rs  recipient.rs
