[package]
name = "assignment"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.4", features = ["zeroize"] }
alloy-rlp = { version = "0.3.5", features = ["derive"] }
byteorder = "1.5.0"
cipher = { version = "0.4.4", features = ["block-padding"] }
concat-kdf = { version = "0.1.0", features = ["std"] }
ctr = { version = "0.9.2", features = ["std", "zeroize"] }
ethereum-types = "0.14.1"
hex = "0.4.3"
hmac = { version = "0.12.1", features = ["std"] }
libsecp256k1-core = "0.3.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
secp256k1 = { version = "0.29.0", features = [
    "rand-std",
    "global-context",
    "recovery",
] }
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
